src/tests/integration/snapshots/mosaic__tests__integration__compatibility__vim_overwrite.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
1   █                                                                                                               
  1 line 1                                                                                                          
  2 line 2                                                                                                          
  3 line 3                                                                                                          
  4 line 4                                                                                                          
  5 line 5                                                                                                          
  6 line 6                                                                                                          
  7 line 7                                                                                                          
  8 line 8                                                                                                          
  9 line 9                                                                                                          
 10 line 10                                                                                                         
 11 line 11                                                                                                         
 12 line 12                                                                                                         
 13 line 13                                                                                                         
 14 line 14                                                                                                         
 15 line 15                                                                                                         
 16 line 16                                                                                                         
 17 line 17                                                                                                         
 18 line 18                                                                                                         
 19 line 19                                                                                                         
 20 line 20                                                                                                         
 21 line 21                                                                                                         
 22 line 22                                                                                                         
 23 line 23                                                                                                         
 24 line 24                                                                                                         
 25 line 25                                                                                                         
 NORMAL  some-file                                                               unix | utf-8 | no ft    1%    1:1  
                                                                                                                    
